--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         shortName: 'did-ni',
         specStatus: 'unofficial',
         format: "markdown",
+        subtitle: 'Naming IDs with Hashes',
         editors: [
           {
             name: "bengo",
