format index.html. also add doctype and charset

--- a/index.html
+++ b/index.html
@@ -1,33 +1,26 @@
-  <head>
-      <title>did:ni</title>
-      <script>
-      var respecConfig = {
-        shortName: 'did-ni',
-        specStatus: 'unofficial',
-        format: "markdown",
-        subtitle: 'Naming IDs with Hashes',
-        editors: [
-          {
-            name: "bengo",
-            url: "https://bengo.is",
-            company: "did.coop",
-            companyURL: "https://did.coop/"
-          },
-        ],
-      }
-      </script>
-    </head>
+<!doctype html>
 
-    <div
-      className="box-content"
-      data-include="spec.md"
-      data-include-format="markdown"
-      data-include-replace="true"
-    ></div>
+<head>
+  <meta charset="UTF-8">
+  <title>did:ni</title>
+  <script>
+    var respecConfig = {
+      shortName: 'did-ni',
+      specStatus: 'unofficial',
+      format: "markdown",
+      subtitle: 'Naming IDs with Hashes',
+      editors: [
+        {
+          name: "bengo",
+          url: "https://bengo.is",
+          company: "did.coop",
+          companyURL: "https://did.coop/"
+        },
+      ],
+    }
+  </script>
+</head>
 
-    <script
-      src="https://www.w3.org/Tools/respec/respec-w3c"
-      defer
-      async
-    ></script>    
+<div className="box-content" data-include="spec.md" data-include-format="markdown" data-include-replace="true"></div>
 
+<script src="https://www.w3.org/Tools/respec/respec-w3c" defer async></script>
